
2017-06-04 Ron Norman <rjn@inglenet.com>
	* common.c: Improved 'cobcrun -r' display for when
	  unsetenv is used in runtime.cfg to show environment variable
	  was removed and runtime.cfg variable was then present

2017-05-31 Ron Norman <rjn@inglenet.com>

	* fileio.c: 
	 For BDB, on OPEN, if the first record in the file has a size
	 larger than the FD has defined then return status 39

2017-05-22  Ron Norman <rjn@inglenet.com>
	* termio.c:
	  pretty_display_numeric updated to handle 
	  SIGN_SEPARATE  TRAILING & LEADING

2017-05-02 Ron Norman <rjn@inglenet.com>
	* common.c,coblocal.h: added 'cob_keycheck' to indicate if INDEXED file
	  keys must match exactly. Default is TRUE
	* fileio.c: 
	  Add code to handle 'keycheck' in IO_filename env var.
	  Added code to indexed_open for C|D|VB-ISAM files to handle keycheck

2017-04-27 Ron Norman <rjn@inglenet.com>
	* move.c: added 'cob_alloc_move' used to copy data for BY VALUE params
	* common.c,common.h: added 'cob_get_hase_name' used to create has value
	  added 'cob_alloc_attr' to create working 'cob_field_attr'
	* call.c: set 'cobglobptr->cob_call_from_c' &
	  'cobglobptr->cob_call_name_hash' as required

2017-04-19 Ron Norman <rjn@inglenet.com>

	* fileio.c: 
	 For the MF EXTFH interface, set f->file_version = COB_FILE_VERSION

2017-04-19 Ron Norman <rjn@inglenet.com>

	* fileio.c: 
	 For BDB, check that the size of a record read is not larger than
	 what the FD has defined and return status 43 to the READ.

2017-04-18 Ron Norman <rjn@inglenet.com>

	* numeric.c,common.c: 
	 Check for HAVE_ISFINITE and use 'isfinite' istead of 'finite'
	 'isfinite' is in the C99 standard and on MAC OS 'finite' is deprecated

2017-04-18 Ron Norman <rjn@inglenet.com>

	* fileio.c: relative_read_size returns an 'int' and not 'size_t'
	* screenio.c: add (int) casts
	* move.c: use 'int' instead of 'size_t' as it needs to be signed


2017-04-12 Ron Norman <rjn@inglenet.com>

	* fileio.c,common.c: 