@@ -1574,10 +1574,10 @@ output_emit_field(cb_tree x, const char *cmt)
 	struct cb_field *f = cb_code_field (x);
 	int	i;
 	if(f
-	&& !(f->report_flag & COB_REPORT_REF_EMITED)) {
+	&& !(f->report_flag & COB_REPORT_REF_EMITTED)) {
 		if(f->step_count < f->size)
 			f->step_count = f->size;
-		f->report_flag |= COB_REPORT_REF_EMITED;
+		f->report_flag |= COB_REPORT_REF_EMITTED;
 		if(f->flag_occurs && f->occurs_max > 1) {
 			output_local("\t\t/* col%3d %s OCCURS %d ", f->report_column, f->name, f->occurs_max);
 			if(cmt && strlen(cmt) > 0)
@@ -6816,7 +6816,7 @@ output_report_sum_control_field (struct cb_field *p)
 }
 
 static void
-output_report_sumed_field (struct cb_field *p)
+output_report_summed_field (struct cb_field *p)
 {
 	cb_tree	l,x;
 	struct cb_field *f;
@@ -6831,16 +6831,16 @@ output_report_sumed_field (struct cb_field *p)
 			x = CB_VALUE (l);
 			f = cb_code_field(x);
 			if (f->storage == CB_STORAGE_WORKING
-			&& !(f->report_flag & COB_REPORT_REF_EMITED)) {
+			&& !(f->report_flag & COB_REPORT_REF_EMITTED)) {
 				output_emit_field(cb_build_field_reference (f, NULL), NULL);
 			}
 		}
 		if (p->children) {
-			output_report_sumed_field (p->children);
+			output_report_summed_field (p->children);
 		}
 	}
 	if (p->sister) {
-		output_report_sumed_field (p->sister);
+		output_report_summed_field (p->sister);
 	}
 }
 
@@ -7076,13 +7076,13 @@ output_report_def_fields (int bgn, int id, struct cb_field *f, struct cb_report 
 		f->report_flag |= COB_REPORT_GROUP_ITEM;
 	if(f->report_when)
 		f->report_flag |= COB_REPORT_HAD_WHEN;
-	if((f->report_flag&~(COB_REPORT_EMITED|COB_REPORT_COLUMN_PLUS)) == 0) {
+	if((f->report_flag&~(COB_REPORT_EMITTED|COB_REPORT_COLUMN_PLUS)) == 0) {
 		output_local("0,%d",f->report_line);
 	}else
 	if(subscript > 0) {
-		output_local("0x%X,%d",f->report_flag&~(COB_REPORT_EMITED|COB_REPORT_GROUP_ITEM),f->report_line);
+		output_local("0x%X,%d",f->report_flag&~(COB_REPORT_EMITTED|COB_REPORT_GROUP_ITEM),f->report_line);
 	} else {
-		output_local("0x%X,%d",f->report_flag&~COB_REPORT_EMITED,f->report_line);
+		output_local("0x%X,%d",f->report_flag&~COB_REPORT_EMITTED,f->report_line);
 	}
 	if(subscript > 1) {
 		idx = 1;
@@ -7147,9 +7147,9 @@ output_report_define_lines (int top, struct cb_field *f, struct cb_report *r)
 	if(!top)
 		c = NULL;
 
-	if(f->report_flag & COB_REPORT_LINE_EMITED)	/* Was this already emited? */
+	if(f->report_flag & COB_REPORT_LINE_EMITTED)	/* Was this already emited? */
 		return;
-	f->report_flag |= COB_REPORT_LINE_EMITED;
+	f->report_flag |= COB_REPORT_LINE_EMITTED;
 
 	if(memcmp(f->name,"FILLER ",7) == 0) {
 		if(f->report_flag & COB_REPORT_PAGE_HEADING) {
@@ -7231,9 +7231,9 @@ output_report_define_lines (int top, struct cb_field *f, struct cb_report *r)
 	output_local(",%d",f->report_decl_id);
 	if(f->report_decl_id)
 		output_local("/* Declaratives */");
-	output_local(",%d,%d,%d,%d",f->report_flag&~COB_REPORT_EMITED,
+	output_local(",%d,%d,%d,%d",f->report_flag&~COB_REPORT_EMITTED,
 				f->report_line, f->step_count,f->next_group_line);
-	output_local(",%d,0",f->report_flag&~COB_REPORT_EMITED);
+	output_local(",%d,0",f->report_flag&~COB_REPORT_EMITTED);
 	output_local ("};\n");
 }
 
@@ -7297,9 +7297,9 @@ output_report_sum_counters (int top, struct cb_field *f, struct cb_report *r)
 
 	if(f->report_sum_list == NULL)
 		return;
-	if(f->report_flag & COB_REPORT_SUM_EMITED)	/* Was this already emited? */
+	if(f->report_flag & COB_REPORT_SUM_EMITTED)	/* Was this already emited? */
 		return;
-	f->report_flag |= COB_REPORT_SUM_EMITED;
+	f->report_flag |= COB_REPORT_SUM_EMITTED;
 
 	if(memcmp(f->name,"FILLER ",7) == 0) {
 		if(f->report_flag & COB_REPORT_PAGE_HEADING) {
@@ -10371,7 +10371,7 @@ codegen (struct cb_program *prog, const int nested)
 				output_local ("static int       %s%d;",
 						CB_PREFIX_BASE, blp->f->id);
 			} else {
-				if( !(blp->f->report_flag & COB_REPORT_REF_EMITED)) {
+				if( !(blp->f->report_flag & COB_REPORT_REF_EMITTED)) {
 					output_local ("static cob_u8_t  %s%d[%d]%s;",
 							CB_PREFIX_BASE, blp->f->id,
 							blp->f->memory_size, COB_ALIGN);
@@ -10405,7 +10405,7 @@ codegen (struct cb_program *prog, const int nested)
 			} else {
 				output (";\t/* %s */\n", k->f->name);
 			}
-			k->f->report_flag |= COB_REPORT_REF_EMITED;
+			k->f->report_flag |= COB_REPORT_REF_EMITTED;
 		}
 		/* Report special fields */
 		if (prog->report_storage) {
@@ -10413,7 +10413,7 @@ codegen (struct cb_program *prog, const int nested)
 				rep = CB_REPORT(CB_VALUE(l));
 				for (fld=rep->records; fld; fld=fld->sister) {
 					if (fld->storage == CB_STORAGE_WORKING
-					&& !(fld->report_flag & COB_REPORT_REF_EMITED)) {
+					&& !(fld->report_flag & COB_REPORT_REF_EMITTED)) {
 						output_emit_field(cb_build_field_reference (fld, NULL), NULL);
 					}
 				}
@@ -10421,7 +10421,7 @@ codegen (struct cb_program *prog, const int nested)
 			for (l = prog->report_list; l; l = CB_CHAIN (l)) {
 				rep = CB_REPORT(CB_VALUE(l));
 				if(rep) {
-					output_report_sumed_field (rep->records);
+					output_report_summed_field (rep->records);
 				}
 			}
 		}
